<resources>
    <string name="app_name">Assignment 4</string>
    <string name="welcome_text">Log in to</string>
    <string name="email_input">Email ID:</string>
    <string name="password_input">Password:</string>
    <string name="email_hint">Email ID…</string>
    <string name="login_button_text">Login</string>
    <string name="register_button_text">Register</string>
    <string name="instapost_text">InstaPost</string>
    <string name="login_failure">Unable to log in! Please try again?</string>
    <string name="login_success">Welcome back!</string>
    <string name="invalid_credentials">Invalid password.</string>
    <string name="weak_password">Password must contain at least 6 characters!</string>
    <string name="invalid_user">Invalid user ID! Create a new account!</string>
    <string name="register_text">Create a new account for</string>
    <string name="user_id_hint">User ID…</string>
    <string name="name_hint">Name…</string>
    <string name="password_hint">Password…</string>
    <string name="confirm_password_hint">Confirm Password…</string>
    <string name="invalid_email">Please enter a valid email!</string>
    <string name="invalid_password">Please enter your password!</string>
    <string name="invalid_confirm_password">Please make sure your passwords match!</string>
    <string name="invalid_user_id">Please enter a user ID!</string>
    <string name="invalid_name">Please enter your name!</string>
    <string name="registration_success">Created your account! Log in now!</string>
    <string name="user_already_exists">Email already in use!</string>
    <string name="title_activity_instapost">InstaPostActivity</string>
    <string name="title_home">Home</string>
    <string name="title_users_list">Users</string>
    <string name="title_tags_list">Hashtags</string>
    <string name="logout">Logout</string>
    <string name="submit_post">Done</string>
    <string name="caption_hint">What\'s this photo all about?</string>
    <string name="no_posts">Nothing here, mate! Go make some posts!</string>
    <string name="create_account_button">Create Account</string>
</resources>
